# WeAt

./: .gitignore  DESIGN.md  Dockerfile  PLAN.md  README.md  ROADMAP.md  deploy.sh  dev.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  spec.md  stop.sh  weat.json.example
.github/workflows/: deploy.yml
backend/: Dockerfile  admin_cli.py  main.py  matrix_api.py  requirements.txt  sync_loop.py  users.json
docs/superpowers/plans/: 2026-06-16-phase3-ai-drafting-kb.md  2026-06-16-phase4-deployment.md  2026-06-16-sprint2-mobile-ux.md  2026-06-16-sprint3-visual-ai.md  2026-06-16-sprint4-pwa-register.md
docs/superpowers/specs/: 2026-06-16-post-mvp-optimization-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/public/: manifest.json  sw.js
frontend/src/: AdminPanel.tsx  App.tsx  ChatPage.tsx  DraftPanel.tsx  LoginPage.tsx  RegisterPage.tsx  RoomList.tsx  Settings.tsx  SummaryPanel.tsx  api.ts  index.css  vault.ts
frontend/src/agent/: index.ts  llm.ts  types.ts
frontend/src/tools/: getRoomHistory.ts  saveToVault.ts  searchVault.ts
nginx/: nginx-init.conf  nginx.conf
spikes/S1-matrix/: NOTES.md  test_matrix_nio.py
spikes/S2-opencode/: NOTES.md  test_opencode_subprocess.py
spikes/S3-mcp/: NOTES.md  mcp_server_spike.py  opencode.jsonc  test_mcp_integration.py
spikes/S4-obsidian/: NOTES.md
spikes/S4-obsidian/test-vault/: AGENTS.md  INSTALL.md
spikes/S5-e2e/: dev_team_transcript.json  integration_test.py  poll_replies.sh  seed_chat.py  send_command.sh  smoke_test.py
src/weat/: main.py
(+57 files in other folders)
