[project]
name = "weat"
version = "0.1.0"
description = "Team chat AI co-pilot: Matrix + Obsidian"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "cryptography>=48.0.0",
    "matrix-nio>=0.25.2",
    "matrix-synapse>=1.153.0",
    "mcp>=1.27.1",
]

[project.scripts]
weat-bridge = "weat.main:main"
weat-mcp = "weat.matrix_mcp.server:main"
weat-setup = "weat.config.wizard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weat"]
